--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -677,11 +677,246 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f64545d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== COMPREHENSIVE DESCRIPTIVE STATISTICS ===\n",
+      "=== BASIC DESCRIPTIVE STATISTICS ===\n",
+      "                                date         price            qty  \\\n",
+      "count                          10956  10956.000000   10956.000000   \n",
+      "mean   2025-08-07 12:40:58.929810176    386.561094    1050.581508   \n",
+      "min              2025-08-07 09:15:00    383.500000       1.000000   \n",
+      "25%       2025-08-07 11:06:26.500000    385.150000      26.000000   \n",
+      "50%              2025-08-07 12:45:14    386.450000     200.000000   \n",
+      "75%    2025-08-07 14:26:31.249999872    387.950000     799.000000   \n",
+      "max              2025-08-07 15:29:58    390.200000  153858.000000   \n",
+      "std                              NaN      1.574324    3357.505716   \n",
+      "\n",
+      "              trnvr     cum_trnvr          hour        minute        second  \n",
+      "count  1.095600e+04  1.095600e+04  10956.000000  10956.000000  10956.000000  \n",
+      "mean   4.063499e+05  2.377823e+09     12.209383     27.926798     29.543173  \n",
+      "min    3.836000e+02  2.543152e+07      9.000000      0.000000      0.000000  \n",
+      "25%    1.003177e+04  1.490814e+09     11.000000     13.000000     15.000000  \n",
+      "50%    7.732500e+04  2.355502e+09     12.000000     26.000000     30.000000  \n",
+      "75%    3.085895e+05  3.321858e+09     14.000000     43.000000     45.000000  \n",
+      "max    5.955074e+07  4.451969e+09     15.000000     59.000000     59.000000  \n",
+      "std    1.299189e+06  1.165181e+09      1.916078     17.252424     17.315855  \n",
+      "\n",
+      "============================================================\n",
+      "=== DETAILED STATISTICS BY COLUMN ===\n",
+      "\n",
+      "--- PRICE ---\n",
+      "Count: 10,956\n",
+      "Mean: 386.56\n",
+      "Std: 1.57\n",
+      "Min: 383.50\n",
+      "25%: 385.15\n",
+      "50% (Median): 386.45\n",
+      "75%: 387.95\n",
+      "Max: 390.20\n",
+      "Range: 6.70\n",
+      "IQR: 2.80\n",
+      "Coefficient of Variation: 0.41%\n",
+      "\n",
+      "--- QTY ---\n",
+      "Count: 10,956\n",
+      "Mean: 1,050.58\n",
+      "Std: 3,357.51\n",
+      "Min: 1.00\n",
+      "25%: 26.00\n",
+      "50% (Median): 200.00\n",
+      "75%: 799.00\n",
+      "Max: 153,858.00\n",
+      "Range: 153,857.00\n",
+      "IQR: 773.00\n",
+      "Coefficient of Variation: 319.59%\n",
+      "\n",
+      "--- TRNVR ---\n",
+      "Count: 10,956\n",
+      "Mean: 406,349.86\n",
+      "Std: 1,299,188.95\n",
+      "Min: 383.60\n",
+      "25%: 10,031.77\n",
+      "50% (Median): 77,325.00\n",
+      "75%: 308,589.53\n",
+      "Max: 59,550,738.90\n",
+      "Range: 59,550,355.30\n",
+      "IQR: 298,557.75\n",
+      "Coefficient of Variation: 319.72%\n",
+      "\n",
+      "--- CUM_TRNVR ---\n",
+      "Count: 10,956\n",
+      "Mean: 2,377,822,586.83\n",
+      "Std: 1,165,180,692.88\n",
+      "Min: 25,431,519.00\n",
+      "25%: 1,490,814,230.85\n",
+      "50% (Median): 2,355,501,798.67\n",
+      "75%: 3,321,857,538.50\n",
+      "Max: 4,451,969,111.70\n",
+      "Range: 4,426,537,592.70\n",
+      "IQR: 1,831,043,307.65\n",
+      "Coefficient of Variation: 49.00%\n",
+      "\n",
+      "============================================================\n",
+      "=== DATETIME FEATURE STATISTICS ===\n",
+      "\n",
+      "--- HOUR DISTRIBUTION ---\n",
+      "hour\n",
+      "9     1047\n",
+      "10    1476\n",
+      "11    1653\n",
+      "12    1807\n",
+      "13    1679\n",
+      "14    1521\n",
+      "15    1773\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "--- MINUTE DISTRIBUTION (Sample) ---\n",
+      "minute\n",
+      "0     165\n",
+      "1     239\n",
+      "2     221\n",
+      "3     264\n",
+      "4     115\n",
+      "5     108\n",
+      "6     111\n",
+      "7     219\n",
+      "8     280\n",
+      "9     258\n",
+      "10    271\n",
+      "11    260\n",
+      "12    114\n",
+      "13    118\n",
+      "14    120\n",
+      "15    305\n",
+      "16    208\n",
+      "17    209\n",
+      "18    228\n",
+      "19    249\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "============================================================\n",
+      "=== TIME PERIOD ANALYSIS ===\n",
+      "Trades during market hours (9 AM - 3 PM): 10,956\n",
+      "Trades outside market hours: 0\n",
+      "\n",
+      "--- PRICE ANALYSIS ---\n",
+      "Price range: ₹383.50 to ₹390.20\n",
+      "Price spread: ₹6.70\n",
+      "\n",
+      "--- VOLUME ANALYSIS ---\n",
+      "Total volume traded: 11,510,171\n",
+      "Average trade size: 1051\n",
+      "Largest single trade: 153,858\n",
+      "\n",
+      "--- TURNOVER ANALYSIS ---\n",
+      "Total turnover: ₹4,451,969,111.70\n",
+      "Average trade value: ₹406,349.86\n",
+      "Largest single trade value: ₹59,550,738.90\n",
+      "\n",
+      "============================================================\n",
+      "=== SUMMARY TABLE ===\n",
+      "        Metric                Value\n",
+      "    Total Rows               10,956\n",
+      "   Price Range    ₹383.50 - ₹390.20\n",
+      "  Total Volume           11,510,171\n",
+      "Total Turnover    ₹4,451,969,111.70\n",
+      "    Time Range 09:15:00 to 15:29:58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get comprehensive descriptive statistics for numeric fields\n",
+    "print(\"=== COMPREHENSIVE DESCRIPTIVE STATISTICS ===\")\n",
+    "\n",
+    "# Get basic describe() for all numeric columns\n",
+    "print(\"=== BASIC DESCRIPTIVE STATISTICS ===\")\n",
+    "print(df.describe())\n",
+    "\n",
+    "# Get detailed statistics for each numeric column\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"=== DETAILED STATISTICS BY COLUMN ===\")\n",
+    "\n",
+    "numeric_cols = ['price', 'qty', 'trnvr', 'cum_trnvr']\n",
+    "\n",
+    "for col in numeric_cols:\n",
+    "    print(f\"\\n--- {col.upper()} ---\")\n",
+    "    col_stats = df[col].describe()\n",
+    "    \n",
+    "    print(f\"Count: {col_stats['count']:,.0f}\")\n",
+    "    print(f\"Mean: {col_stats['mean']:,.2f}\")\n",
+    "    print(f\"Std: {col_stats['std']:,.2f}\")\n",
+    "    print(f\"Min: {col_stats['min']:,.2f}\")\n",
+    "    print(f\"25%: {col_stats['25%']:,.2f}\")\n",
+    "    print(f\"50% (Median): {col_stats['50%']:,.2f}\")\n",
+    "    print(f\"75%: {col_stats['75%']:,.2f}\")\n",
+    "    print(f\"Max: {col_stats['max']:,.2f}\")\n",
+    "    \n",
+    "    # Additional useful statistics\n",
+    "    print(f\"Range: {col_stats['max'] - col_stats['min']:,.2f}\")\n",
+    "    print(f\"IQR: {col_stats['75%'] - col_stats['25%']:,.2f}\")\n",
+    "    print(f\"Coefficient of Variation: {(col_stats['std']/col_stats['mean']*100):,.2f}%\")\n",
+    "\n",
+    "# Get statistics for datetime features\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"=== DATETIME FEATURE STATISTICS ===\")\n",
+    "\n",
+    "print(\"\\n--- HOUR DISTRIBUTION ---\")\n",
+    "hour_counts = df['hour'].value_counts().sort_index()\n",
+    "print(hour_counts)\n",
+    "\n",
+    "print(\"\\n--- MINUTE DISTRIBUTION (Sample) ---\")\n",
+    "minute_counts = df['minute'].value_counts().sort_index().head(20)\n",
+    "print(minute_counts)\n",
+    "\n",
+    "# Get statistics for specific time periods\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"=== TIME PERIOD ANALYSIS ===\")\n",
+    "\n",
+    "# Market hours analysis (assuming 9:15 AM to 3:30 PM)\n",
+    "market_hours = df[(df['hour'] >= 9) & (df['hour'] <= 15)]\n",
+    "print(f\"Trades during market hours (9 AM - 3 PM): {len(market_hours):,}\")\n",
+    "print(f\"Trades outside market hours: {len(df) - len(market_hours):,}\")\n",
+    "\n",
+    "# Price range analysis\n",
+    "print(f\"\\n--- PRICE ANALYSIS ---\")\n",
+    "print(f\"Price range: ₹{df['price'].min():.2f} to ₹{df['price'].max():.2f}\")\n",
+    "print(f\"Price spread: ₹{df['price'].max() - df['price'].min():.2f}\")\n",
+    "\n",
+    "# Volume analysis\n",
+    "print(f\"\\n--- VOLUME ANALYSIS ---\")\n",
+    "print(f\"Total volume traded: {df['qty'].sum():,}\")\n",
+    "print(f\"Average trade size: {df['qty'].mean():.0f}\")\n",
+    "print(f\"Largest single trade: {df['qty'].max():,}\")\n",
+    "\n",
+    "# Turnover analysis\n",
+    "print(f\"\\n--- TURNOVER ANALYSIS ---\")\n",
+    "print(f\"Total turnover: ₹{df['trnvr'].sum():,.2f}\")\n",
+    "print(f\"Average trade value: ₹{df['trnvr'].mean():,.2f}\")\n",
+    "print(f\"Largest single trade value: ₹{df['trnvr'].max():,.2f}\")\n",
+    "\n",
+    "# Display summary table\n",
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"=== SUMMARY TABLE ===\")\n",
+    "summary_data = {\n",
+    "    'Metric': ['Total Rows', 'Price Range', 'Total Volume', 'Total Turnover', 'Time Range'],\n",
+    "    'Value': [\n",
+    "        f\"{len(df):,}\",\n",
+    "        f\"₹{df['price'].min():.2f} - ₹{df['price'].max():.2f}\",\n",
+    "        f\"{df['qty'].sum():,}\",\n",
+    "        f\"₹{df['trnvr'].sum():,.2f}\",\n",
+    "        f\"{df['date'].min().strftime('%H:%M:%S')} to {df['date'].max().strftime('%H:%M:%S')}\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "summary_df = pd.DataFrame(summary_data)\n",
+    "print(summary_df.to_string(index=False))"
+   ]
   },
   {
    "cell_type": "code",
