Data Consistency Check

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -920,11 +920,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "ffcd6431",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TRADING DAYS ANALYSIS ===\n",
+      "Total unique trading days: 1\n",
+      "\n",
+      "=== ALL TRADING DATES ===\n",
+      " 1. 2025-08-07\n",
+      "\n",
+      "Trading date range: 2025-08-07 to 2025-08-07\n",
+      "\n",
+      "=== DATE ANALYSIS ===\n",
+      "Single trading day data\n",
+      "Date: 2025-08-07\n",
+      "\n",
+      "=== DATA CONSISTENCY CHECK ===\n",
+      "Total rows in dataset: 10,956\n",
+      "Average rows per trading day: 10956.0\n",
+      "\n",
+      "=== SUMMARY ===\n",
+      "✓ Total unique trading days: 1\n",
+      "✓ Date range: 2025-08-07 to 2025-08-07\n",
+      "✓ Ready for daily analysis and aggregation\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count total unique trading days\n",
+    "print(\"=== TRADING DAYS ANALYSIS ===\")\n",
+    "\n",
+    "# Extract unique dates from the datetime column\n",
+    "unique_dates = df['date_only'].unique()\n",
+    "total_trading_days = len(unique_dates)\n",
+    "\n",
+    "print(f\"Total unique trading days: {total_trading_days}\")\n",
+    "\n",
+    "# Display all unique trading dates\n",
+    "print(f\"\\n=== ALL TRADING DATES ===\")\n",
+    "for i, date in enumerate(sorted(unique_dates), 1):\n",
+    "    print(f\"{i:2d}. {date}\")\n",
+    "\n",
+    "# Get date range\n",
+    "date_range = f\"{min(unique_dates)} to {max(unique_dates)}\"\n",
+    "print(f\"\\nTrading date range: {date_range}\")\n",
+    "\n",
+    "# Check if all dates are from the same month/year\n",
+    "print(f\"\\n=== DATE ANALYSIS ===\")\n",
+    "if total_trading_days == 1:\n",
+    "    print(\"Single trading day data\")\n",
+    "    print(f\"Date: {unique_dates[0]}\")\n",
+    "    # Initialize these variables for single day to avoid errors\n",
+    "    months = {unique_dates[0].month}\n",
+    "    years = {unique_dates[0].year}\n",
+    "elif total_trading_days > 1:\n",
+    "    # Check month and year consistency\n",
+    "    months = set(date.month for date in unique_dates)\n",
+    "    years = set(date.year for date in unique_dates)\n",
+    "    \n",
+    "    print(f\"Multiple trading days: {total_trading_days}\")\n",
+    "    print(f\"Months covered: {sorted(months)}\")\n",
+    "    print(f\"Years covered: {sorted(years)}\")\n",
+    "    \n",
+    "    if len(months) == 1:\n",
+    "        month_name = pd.Timestamp(unique_dates[0]).strftime('%B')\n",
+    "        print(f\"All dates are from: {month_name} {list(years)[0]}\")\n",
+    "    \n",
+    "    if len(years) == 1:\n",
+    "        print(f\"All dates are from year: {list(years)[0]}\")\n",
+    "\n",
+    "# Trading days by month (if multiple months)\n",
+    "if len(months) > 1:\n",
+    "    print(f\"\\n=== TRADING DAYS BY MONTH ===\")\n",
+    "    monthly_counts = {}\n",
+    "    for date in unique_dates:\n",
+    "        month_key = f\"{date.year}-{date.month:02d}\"\n",
+    "        monthly_counts[month_key] = monthly_counts.get(month_key, 0) + 1\n",
+    "    \n",
+    "    for month_key in sorted(monthly_counts.keys()):\n",
+    "        year, month = month_key.split('-')\n",
+    "        month_name = pd.Timestamp(f\"{year}-{month}-01\").strftime('%B %Y')\n",
+    "        print(f\"{month_name}: {monthly_counts[month_key]} trading days\")\n",
+    "\n",
+    "# Verify data consistency\n",
+    "print(f\"\\n=== DATA CONSISTENCY CHECK ===\")\n",
+    "print(f\"Total rows in dataset: {len(df):,}\")\n",
+    "print(f\"Average rows per trading day: {len(df)/total_trading_days:.1f}\")\n",
+    "\n",
+    "# Check for any missing dates in sequence (if multiple days)\n",
+    "if total_trading_days > 1:\n",
+    "    sorted_dates = sorted(unique_dates)\n",
+    "    date_diffs = []\n",
+    "    for i in range(1, len(sorted_dates)):\n",
+    "        diff = (sorted_dates[i] - sorted_dates[i-1]).days\n",
+    "        date_diffs.append(diff)\n",
+    "    \n",
+    "    if any(diff > 1 for diff in date_diffs):\n",
+    "        print(f\"\\n⚠️  Gaps detected in trading days:\")\n",
+    "        for i, diff in enumerate(date_diffs):\n",
+    "            if diff > 1:\n",
+    "                gap_start = sorted_dates[i-1]\n",
+    "                gap_end = sorted_dates[i]\n",
+    "                print(f\"  Gap: {gap_start} to {gap_end} ({diff-1} missing days)\")\n",
+    "    else:\n",
+    "        print(f\"\\n✓ No gaps in trading days - consecutive trading days\")\n",
+    "\n",
+    "print(f\"\\n=== SUMMARY ===\")\n",
+    "print(f\"✓ Total unique trading days: {total_trading_days}\")\n",
+    "print(f\"✓ Date range: {date_range}\")\n",
+    "print(f\"✓ Ready for daily analysis and aggregation\")"
+   ]
   },
   {
    "cell_type": "code",
