--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -1038,11 +1038,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "6881a59c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TIMESTAMP RANGE ANALYSIS ===\n",
+      "Earliest timestamp: 2025-08-07 09:15:00\n",
+      "Latest timestamp: 2025-08-07 15:29:58\n",
+      "Total time duration: 0 days 06:14:58\n",
+      "Duration in hours: 6.25 hours\n",
+      "Duration in minutes: 375 minutes\n",
+      "\n",
+      "=== EARLIEST TIMESTAMP ROW ===\n",
+      "               date  price   qty      trnvr  cum_trnvr\n",
+      "2025-08-07 09:15:00 386.85 65740 25431519.0 25431519.0\n",
+      "\n",
+      "=== LATEST TIMESTAMP ROW ===\n",
+      "               date  price  qty    trnvr    cum_trnvr\n",
+      "2025-08-07 15:29:58 388.25 1740 675555.0 4.451969e+09\n",
+      "\n",
+      "=== TIME PERIOD ANALYSIS ===\n",
+      "Earliest: 09:15\n",
+      "Latest: 15:29\n",
+      "\n",
+      "Market hours: 09:15:00 to 15:30:00\n",
+      "Data coverage:\n",
+      "\n",
+      "=== TIME SERIES CONTINUITY ===\n",
+      "Minimum time difference between consecutive rows: 0 days 00:00:00\n",
+      "Maximum time difference between consecutive rows: 0 days 00:00:12\n",
+      "\n",
+      "=== SUMMARY ===\n",
+      "✓ Data spans: 2025-08-07 09:15:00 to 2025-08-07 15:29:58\n",
+      "✓ Total duration: 6.25 hours (375 minutes)\n",
+      "✓ Total rows: 10,956\n",
+      "✓ Average frequency: 1753.1 ticks per hour\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Identify earliest and latest timestamps\n",
+    "print(\"=== TIMESTAMP RANGE ANALYSIS ===\")\n",
+    "\n",
+    "# Get earliest and latest timestamps\n",
+    "earliest_timestamp = df['date'].min()\n",
+    "latest_timestamp = df['date'].max()\n",
+    "\n",
+    "print(f\"Earliest timestamp: {earliest_timestamp}\")\n",
+    "print(f\"Latest timestamp: {latest_timestamp}\")\n",
+    "\n",
+    "# Calculate total time duration\n",
+    "total_duration = latest_timestamp - earliest_timestamp\n",
+    "print(f\"Total time duration: {total_duration}\")\n",
+    "\n",
+    "# Convert duration to more readable format\n",
+    "duration_hours = total_duration.total_seconds() / 3600\n",
+    "duration_minutes = total_duration.total_seconds() / 60\n",
+    "\n",
+    "print(f\"Duration in hours: {duration_hours:.2f} hours\")\n",
+    "print(f\"Duration in minutes: {duration_minutes:.0f} minutes\")\n",
+    "\n",
+    "# Display the actual rows with earliest and latest timestamps\n",
+    "print(f\"\\n=== EARLIEST TIMESTAMP ROW ===\")\n",
+    "earliest_row = df[df['date'] == earliest_timestamp]\n",
+    "print(earliest_row[['date', 'price', 'qty', 'trnvr', 'cum_trnvr']].to_string(index=False))\n",
+    "\n",
+    "print(f\"\\n=== LATEST TIMESTAMP ROW ===\")\n",
+    "latest_row = df[df['date'] == latest_timestamp]\n",
+    "print(latest_row[['date', 'price', 'qty', 'trnvr', 'cum_trnvr']].to_string(index=False))\n",
+    "\n",
+    "# Check if timestamps span across different time periods\n",
+    "print(f\"\\n=== TIME PERIOD ANALYSIS ===\")\n",
+    "earliest_hour = earliest_timestamp.hour\n",
+    "earliest_minute = earliest_timestamp.minute\n",
+    "latest_hour = latest_timestamp.hour\n",
+    "latest_minute = latest_timestamp.minute\n",
+    "\n",
+    "print(f\"Earliest: {earliest_hour:02d}:{earliest_minute:02d}\")\n",
+    "print(f\"Latest: {latest_hour:02d}:{latest_minute:02d}\")\n",
+    "\n",
+    "# Market hours analysis (assuming 9:15 AM to 3:30 PM)\n",
+    "market_start = pd.Timestamp('2025-08-07 09:15:00')\n",
+    "market_end = pd.Timestamp('2025-08-07 15:30:00')\n",
+    "\n",
+    "print(f\"\\nMarket hours: 09:15:00 to 15:30:00\")\n",
+    "print(f\"Data coverage:\")\n",
+    "\n",
+    "if earliest_timestamp < market_start:\n",
+    "    pre_market_duration = market_start - earliest_timestamp\n",
+    "    print(f\"  Pre-market: {earliest_timestamp.strftime('%H:%M:%S')} to {market_start.strftime('%H:%M:%S')} ({pre_market_duration})\")\n",
+    "\n",
+    "if earliest_timestamp <= market_start and latest_timestamp >= market_end:\n",
+    "    market_duration = market_end - market_start\n",
+    "    print(f\"  Market hours: {market_start.strftime('%H:%M:%S')} to {market_end.strftime('%H:%M:%S')} ({market_duration})\")\n",
+    "\n",
+    "if latest_timestamp > market_end:\n",
+    "    post_market_duration = latest_timestamp - market_end\n",
+    "    print(f\"  Post-market: {market_end.strftime('%H:%M:%S')} to {latest_timestamp.strftime('%H:%M:%S')} ({post_market_duration})\")\n",
+    "\n",
+    "# Check for any gaps in the time series\n",
+    "print(f\"\\n=== TIME SERIES CONTINUITY ===\")\n",
+    "time_diffs = df['date'].diff().dropna()\n",
+    "min_time_diff = time_diffs.min()\n",
+    "max_time_diff = time_diffs.max()\n",
+    "\n",
+    "print(f\"Minimum time difference between consecutive rows: {min_time_diff}\")\n",
+    "print(f\"Maximum time difference between consecutive rows: {max_time_diff}\")\n",
+    "\n",
+    "# Identify any unusually large time gaps\n",
+    "large_gaps = time_diffs[time_diffs > pd.Timedelta(minutes=1)]\n",
+    "if len(large_gaps) > 0:\n",
+    "    print(f\"\\n⚠️  Found {len(large_gaps)} time gaps larger than 1 minute:\")\n",
+    "    gap_indices = large_gaps.index[:5]  # Show first 5 gaps\n",
+    "    for idx in gap_indices:\n",
+    "        gap_start = df.loc[idx-1, 'date']\n",
+    "        gap_end = df.loc[idx, 'date']\n",
+    "        gap_duration = gap_end - gap_start\n",
+    "        print(f\"  Gap: {gap_start.strftime('%H:%M:%S')} to {gap_end.strftime('%H:%M:%S')} (Duration: {gap_duration})\")\n",
+    "\n",
+    "# Summary\n",
+    "print(f\"\\n=== SUMMARY ===\")\n",
+    "print(f\"✓ Data spans: {earliest_timestamp.strftime('%Y-%m-%d %H:%M:%S')} to {latest_timestamp.strftime('%Y-%m-%d %H:%M:%S')}\")\n",
+    "print(f\"✓ Total duration: {duration_hours:.2f} hours ({duration_minutes:.0f} minutes)\")\n",
+    "print(f\"✓ Total rows: {len(df):,}\")\n",
+    "print(f\"✓ Average frequency: {len(df)/duration_hours:.1f} ticks per hour\")"
+   ]
   },
   {
    "cell_type": "code",
