--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -1170,11 +1170,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "18a43503",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== VOLUME AND TURNOVER ANALYSIS ===\n",
+      "Total traded volume: 11,510,171\n",
+      "Total turnover: ₹4,451,969,111.70\n",
+      "\n",
+      "=== DETAILED METRICS ===\n",
+      "--- VOLUME ANALYSIS ---\n",
+      "Average trade size: 1,051\n",
+      "Median trade size: 200\n",
+      "Largest single trade: 153,858\n",
+      "Smallest single trade: 1\n",
+      "\n",
+      "--- TURNOVER ANALYSIS ---\n",
+      "Average trade value: ₹406,349.86\n",
+      "Median trade value: ₹77,325.00\n",
+      "Largest single trade value: ₹59,550,738.90\n",
+      "Smallest single trade value: ₹383.60\n",
+      "\n",
+      "--- PRICE ANALYSIS ---\n",
+      "Simple average price: ₹386.56\n",
+      "Weighted average price (by volume): ₹386.79\n",
+      "Price range: ₹6.70\n",
+      "\n",
+      "--- VOLUME-WEIGHTED METRICS ---\n",
+      "Volume Weighted Average Price (VWAP): ₹386.79\n",
+      "\n",
+      "--- EFFICIENCY METRICS ---\n",
+      "Total number of trades: 10,956\n",
+      "Average volume per trade: 1,051\n",
+      "Average turnover per trade: ₹406,349.86\n",
+      "\n",
+      "=== TIME-BASED ANALYSIS ===\n",
+      "Trading duration: 6.25 hours\n",
+      "Volume per hour: 1,841,791\n",
+      "Turnover per hour: ₹712,378,380.39\n",
+      "\n",
+      "--- MARKET ACTIVITY INTENSITY ---\n",
+      "Trades per hour: 1753.1\n",
+      "Volume per trade: 1,051\n",
+      "Turnover per trade: ₹406,349.86\n",
+      "\n",
+      "============================================================\n",
+      "=== SUMMARY TABLE ===\n",
+      "         Metric             Value\n",
+      "   Total Volume        11,510,171\n",
+      " Total Turnover ₹4,451,969,111.70\n",
+      "   Total Trades            10,956\n",
+      " Avg Trade Size             1,051\n",
+      "Avg Trade Value       ₹406,349.86\n",
+      "           VWAP           ₹386.79\n",
+      "\n",
+      "=== KEY INSIGHTS ===\n",
+      "✓ Total volume traded: 11,510,171 shares\n",
+      "✓ Total market value: ₹4,451,969,111.70\n",
+      "✓ Market activity: 10,956 individual trades\n",
+      "✓ Trading efficiency: ₹386.79 per share\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate total traded volume and total turnover\n",
+    "print(\"=== VOLUME AND TURNOVER ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate totals\n",
+    "total_volume = df['qty'].sum()\n",
+    "total_turnover = df['trnvr'].sum()\n",
+    "\n",
+    "print(f\"Total traded volume: {total_volume:,}\")\n",
+    "print(f\"Total turnover: ₹{total_turnover:,.2f}\")\n",
+    "\n",
+    "# Additional volume and turnover metrics\n",
+    "print(f\"\\n=== DETAILED METRICS ===\")\n",
+    "\n",
+    "# Volume analysis\n",
+    "print(\"--- VOLUME ANALYSIS ---\")\n",
+    "avg_trade_size = df['qty'].mean()\n",
+    "median_trade_size = df['qty'].median()\n",
+    "max_trade_size = df['qty'].max()\n",
+    "min_trade_size = df['qty'].min()\n",
+    "\n",
+    "print(f\"Average trade size: {avg_trade_size:,.0f}\")\n",
+    "print(f\"Median trade size: {median_trade_size:,.0f}\")\n",
+    "print(f\"Largest single trade: {max_trade_size:,}\")\n",
+    "print(f\"Smallest single trade: {min_trade_size:,}\")\n",
+    "\n",
+    "# Turnover analysis\n",
+    "print(f\"\\n--- TURNOVER ANALYSIS ---\")\n",
+    "avg_trade_value = df['trnvr'].mean()\n",
+    "median_trade_value = df['trnvr'].median()\n",
+    "max_trade_value = df['trnvr'].max()\n",
+    "min_trade_value = df['trnvr'].min()\n",
+    "\n",
+    "print(f\"Average trade value: ₹{avg_trade_value:,.2f}\")\n",
+    "print(f\"Median trade value: ₹{median_trade_value:,.2f}\")\n",
+    "print(f\"Largest single trade value: ₹{max_trade_value:,.2f}\")\n",
+    "print(f\"Smallest single trade value: ₹{min_trade_value:,.2f}\")\n",
+    "\n",
+    "# Price analysis\n",
+    "print(f\"\\n--- PRICE ANALYSIS ---\")\n",
+    "avg_price = df['price'].mean()\n",
+    "weighted_avg_price = (df['price'] * df['qty']).sum() / df['qty'].sum()\n",
+    "price_range = df['price'].max() - df['price'].min()\n",
+    "\n",
+    "print(f\"Simple average price: ₹{avg_price:.2f}\")\n",
+    "print(f\"Weighted average price (by volume): ₹{weighted_avg_price:.2f}\")\n",
+    "print(f\"Price range: ₹{price_range:.2f}\")\n",
+    "\n",
+    "# Volume-weighted metrics\n",
+    "print(f\"\\n--- VOLUME-WEIGHTED METRICS ---\")\n",
+    "vwap = (df['price'] * df['qty']).sum() / df['qty'].sum()\n",
+    "print(f\"Volume Weighted Average Price (VWAP): ₹{vwap:.2f}\")\n",
+    "\n",
+    "# Efficiency metrics\n",
+    "print(f\"\\n--- EFFICIENCY METRICS ---\")\n",
+    "trades_count = len(df)\n",
+    "print(f\"Total number of trades: {trades_count:,}\")\n",
+    "print(f\"Average volume per trade: {total_volume/trades_count:,.0f}\")\n",
+    "print(f\"Average turnover per trade: ₹{total_turnover/trades_count:,.2f}\")\n",
+    "\n",
+    "# Time-based analysis\n",
+    "print(f\"\\n=== TIME-BASED ANALYSIS ===\")\n",
+    "earliest_time = df['date'].min()\n",
+    "latest_time = df['date'].max()\n",
+    "duration_hours = (latest_time - earliest_time).total_seconds() / 3600\n",
+    "\n",
+    "print(f\"Trading duration: {duration_hours:.2f} hours\")\n",
+    "print(f\"Volume per hour: {total_volume/duration_hours:,.0f}\")\n",
+    "print(f\"Turnover per hour: ₹{total_turnover/duration_hours:,.2f}\")\n",
+    "\n",
+    "# Market activity intensity\n",
+    "print(f\"\\n--- MARKET ACTIVITY INTENSITY ---\")\n",
+    "print(f\"Trades per hour: {trades_count/duration_hours:.1f}\")\n",
+    "print(f\"Volume per trade: {total_volume/trades_count:,.0f}\")\n",
+    "print(f\"Turnover per trade: ₹{total_turnover/trades_count:,.2f}\")\n",
+    "\n",
+    "# Summary table\n",
+    "print(f\"\\n\" + \"=\"*60)\n",
+    "print(\"=== SUMMARY TABLE ===\")\n",
+    "summary_data = {\n",
+    "    'Metric': ['Total Volume', 'Total Turnover', 'Total Trades', 'Avg Trade Size', 'Avg Trade Value', 'VWAP'],\n",
+    "    'Value': [\n",
+    "        f\"{total_volume:,}\",\n",
+    "        f\"₹{total_turnover:,.2f}\",\n",
+    "        f\"{trades_count:,}\",\n",
+    "        f\"{avg_trade_size:,.0f}\",\n",
+    "        f\"₹{avg_trade_value:,.2f}\",\n",
+    "        f\"₹{vwap:.2f}\"\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "summary_df = pd.DataFrame(summary_data)\n",
+    "print(summary_df.to_string(index=False))\n",
+    "\n",
+    "print(f\"\\n=== KEY INSIGHTS ===\")\n",
+    "print(f\"✓ Total volume traded: {total_volume:,} shares\")\n",
+    "print(f\"✓ Total market value: ₹{total_turnover:,.2f}\")\n",
+    "print(f\"✓ Market activity: {trades_count:,} individual trades\")\n",
+    "print(f\"✓ Trading efficiency: ₹{total_turnover/total_volume:.2f} per share\")"
+   ]
   },
   {
    "cell_type": "code",
