Actual vs Zero Qty

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -1339,11 +1339,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2e17d8c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== TRADE TYPE ANALYSIS ===\n",
+      "Total records in dataset: 10,956\n",
+      "Actual trades (qty > 0): 10,956\n",
+      "Zero-quantity updates (qty = 0): 0\n",
+      "\n",
+      "=== PERCENTAGE BREAKDOWN ===\n",
+      "Actual trades: 100.00%\n",
+      "Zero-quantity updates: 0.00%\n",
+      "\n",
+      "=== DATA COMPOSITION ANALYSIS ===\n",
+      "✓ Dataset contains only actual trades (all qty > 0)\n",
+      "\n",
+      "=== SAMPLE OF ACTUAL TRADES (qty > 0) ===\n",
+      "                 date   price    qty        trnvr    cum_trnvr\n",
+      "0 2025-08-07 09:15:00  386.85  65740  25431519.00  25431519.00\n",
+      "1 2025-08-07 09:15:01  386.30    895    345738.50  25777257.50\n",
+      "2 2025-08-07 09:15:01  386.75   1401    541836.75  26319094.25\n",
+      "3 2025-08-07 09:15:02  386.80   1795    694306.00  27013400.25\n",
+      "4 2025-08-07 09:15:02  386.95    741    286729.95  27300130.20\n",
+      "5 2025-08-07 09:15:03  386.90   2717   1051207.30  28351337.50\n",
+      "6 2025-08-07 09:15:03  386.80   9068   3507502.40  31858839.90\n",
+      "7 2025-08-07 09:15:04  386.75   1141    441281.75  32300121.65\n",
+      "8 2025-08-07 09:15:04  386.90   1798    695646.20  32995767.85\n",
+      "9 2025-08-07 09:15:05  386.75   1679    649353.25  34453992.90\n",
+      "\n",
+      "=== CHARACTERISTICS ANALYSIS ===\n",
+      "--- ACTUAL TRADES (qty > 0) ---\n",
+      "  Total volume: 11,510,171\n",
+      "  Total turnover: ₹4,451,969,111.70\n",
+      "  Average trade size: 1,051\n",
+      "  Average trade value: ₹406,349.86\n",
+      "  Price range: ₹383.50 - ₹390.20\n",
+      "\n",
+      "=== DATA QUALITY IMPLICATIONS ===\n",
+      "✓ Clean dataset with only actual trades\n",
+      "\n",
+      "=== RECOMMENDATIONS ===\n",
+      "  ✓ Dataset is ready for all types of analysis\n",
+      "\n",
+      "=== SUMMARY ===\n",
+      "✓ Total records: 10,956\n",
+      "✓ Actual trades: 10,956 (100.0%)\n",
+      "✓ Zero-qty updates: 0 (0.0%)\n",
+      "✓ Data type: Pure trades only\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check number of trades with qty > 0 (actual trades vs. zero-qty updates)\n",
+    "print(\"=== TRADE TYPE ANALYSIS ===\")\n",
+    "\n",
+    "# Count different types of records\n",
+    "total_records = len(df)\n",
+    "actual_trades = (df['qty'] > 0).sum()\n",
+    "zero_qty_updates = (df['qty'] == 0).sum()\n",
+    "\n",
+    "print(f\"Total records in dataset: {total_records:,}\")\n",
+    "print(f\"Actual trades (qty > 0): {actual_trades:,}\")\n",
+    "print(f\"Zero-quantity updates (qty = 0): {zero_qty_updates:,}\")\n",
+    "\n",
+    "# Calculate percentages\n",
+    "actual_trades_pct = (actual_trades / total_records) * 100\n",
+    "zero_qty_pct = (zero_qty_updates / total_records) * 100\n",
+    "\n",
+    "print(f\"\\n=== PERCENTAGE BREAKDOWN ===\")\n",
+    "print(f\"Actual trades: {actual_trades_pct:.2f}%\")\n",
+    "print(f\"Zero-quantity updates: {zero_qty_pct:.2f}%\")\n",
+    "\n",
+    "# Analyze the data composition\n",
+    "print(f\"\\n=== DATA COMPOSITION ANALYSIS ===\")\n",
+    "if zero_qty_updates > 0:\n",
+    "    print(\"⚠️  Dataset contains both actual trades and zero-quantity updates\")\n",
+    "    print(\"   This suggests the data includes bid-ask spread updates\")\n",
+    "else:\n",
+    "    print(\"✓ Dataset contains only actual trades (all qty > 0)\")\n",
+    "\n",
+    "# Show sample of actual trades\n",
+    "print(f\"\\n=== SAMPLE OF ACTUAL TRADES (qty > 0) ===\")\n",
+    "actual_trades_df = df[df['qty'] > 0]\n",
+    "print(actual_trades_df[['date', 'price', 'qty', 'trnvr', 'cum_trnvr']].head(10))\n",
+    "\n",
+    "# Show sample of zero-quantity updates (if any exist)\n",
+    "if zero_qty_updates > 0:\n",
+    "    print(f\"\\n=== SAMPLE OF ZERO-QUANTITY UPDATES (qty = 0) ===\")\n",
+    "    zero_qty_df = df[df['qty'] == 0]\n",
+    "    print(zero_qty_df[['date', 'price', 'qty', 'trnvr', 'cum_trnvr']].head(10))\n",
+    "\n",
+    "# Analyze characteristics of each type\n",
+    "print(f\"\\n=== CHARACTERISTICS ANALYSIS ===\")\n",
+    "\n",
+    "# Actual trades characteristics\n",
+    "if actual_trades > 0:\n",
+    "    print(\"--- ACTUAL TRADES (qty > 0) ---\")\n",
+    "    actual_trades_data = df[df['qty'] > 0]\n",
+    "    print(f\"  Total volume: {actual_trades_data['qty'].sum():,}\")\n",
+    "    print(f\"  Total turnover: ₹{actual_trades_data['trnvr'].sum():,.2f}\")\n",
+    "    print(f\"  Average trade size: {actual_trades_data['qty'].mean():,.0f}\")\n",
+    "    print(f\"  Average trade value: ₹{actual_trades_data['trnvr'].mean():,.2f}\")\n",
+    "    print(f\"  Price range: ₹{actual_trades_data['price'].min():.2f} - ₹{actual_trades_data['price'].max():.2f}\")\n",
+    "\n",
+    "# Zero-quantity updates characteristics (if any exist)\n",
+    "if zero_qty_updates > 0:\n",
+    "    print(f\"\\n--- ZERO-QUANTITY UPDATES (qty = 0) ---\")\n",
+    "    zero_qty_data = df[df['qty'] == 0]\n",
+    "    print(f\"  Total records: {len(zero_qty_data):,}\")\n",
+    "    print(f\"  Price range: ₹{zero_qty_data['price'].min():.2f} - ₹{zero_qty_data['price'].max():.2f}\")\n",
+    "    print(f\"  Average price: ₹{zero_qty_data['price'].mean():.2f}\")\n",
+    "    \n",
+    "    # Check if these are bid-ask spread updates\n",
+    "    if zero_qty_data['trnvr'].sum() == 0:\n",
+    "        print(f\"  All have zero turnover (typical bid-ask updates)\")\n",
+    "    else:\n",
+    "        print(f\"  Some have non-zero turnover (data quality issue)\")\n",
+    "\n",
+    "# Data quality implications\n",
+    "print(f\"\\n=== DATA QUALITY IMPLICATIONS ===\")\n",
+    "if zero_qty_updates > 0:\n",
+    "    print(\"⚠️  Mixed data types detected:\")\n",
+    "    print(\"   - Actual trades: Use for volume, turnover, and price analysis\")\n",
+    "    print(\"   - Zero-qty updates: Use for bid-ask spread analysis only\")\n",
+    "    print(\"   - Consider filtering by qty > 0 for trade-based analysis\")\n",
+    "else:\n",
+    "    print(\"✓ Clean dataset with only actual trades\")\n",
+    "\n",
+    "# Recommendations\n",
+    "print(f\"\\n=== RECOMMENDATIONS ===\")\n",
+    "if zero_qty_updates > 0:\n",
+    "    print(\"For different types of analysis:\")\n",
+    "    print(\"  📊 Volume/Turnover analysis: Use df[df['qty'] > 0]\")\n",
+    "    print(\"  📈 Price movement analysis: Use df[df['qty'] > 0]\")\n",
+    "    print(\"  🔍 Bid-ask spread analysis: Use df[df['qty'] == 0]\")\n",
+    "    print(\"  📋 Complete market picture: Use full dataset\")\n",
+    "else:\n",
+    "    print(\"  ✓ Dataset is ready for all types of analysis\")\n",
+    "\n",
+    "# Summary\n",
+    "print(f\"\\n=== SUMMARY ===\")\n",
+    "print(f\"✓ Total records: {total_records:,}\")\n",
+    "print(f\"✓ Actual trades: {actual_trades:,} ({actual_trades_pct:.1f}%)\")\n",
+    "print(f\"✓ Zero-qty updates: {zero_qty_updates:,} ({zero_qty_pct:.1f}%)\")\n",
+    "print(f\"✓ Data type: {'Mixed (trades + updates)' if zero_qty_updates > 0 else 'Pure trades only'}\")"
+   ]
   },
   {
    "cell_type": "code",
